Site redesign.. yaay

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
   <main id="main">
-    <div>
+    <section>
       <h1 id="title">not.. found..?</h1>
-      <img src="/404.jpg" alt="a picture of the game oneshot where the protagonist's dialogue box shows: *confused cat noises*" />
-      <a href="{{ "" | relURL }}">Go Home</a>
-    </div>
+      <img src="/404.jpg" alt="a picture of the game Oneshot where the protagonist's dialogue box shows: *confused cat noises*" />
+    </section>
+    <a href="{{ "" | relURL }}">Go Home</a>
   </main>
 {{ end }}
 
