Blurry font fix, add a new 88x31 button and about me edit

--- a/layouts/_partials/footer.html
+++ b/layouts/_partials/footer.html
@@ -7,6 +7,9 @@
     <a href="//sdomi.pl/">
         <img src="//sdomi.pl/img/button.bmp" alt="An 88x31 button. Witch hat on the left, text 'sdomi' on the right. The background is procedurally generated every 30 or so seconds." title="sdomi's webpage">
     </a>
+    <a href="//cyrneko.eu/">
+        <img src="/buttons/cyrneko.png" alt="An 88x31 button. A black-purpled hair cat on the left waving the non-binary flag, text 'cyrneko' on the right. The background is clouds on the sky." title="cyrneko's webpage">
+    </a>
     <a href="//www.firefox.com/">
         <img src="/buttons/getmozilla.gif" alt="An 88x31 button. It shows the Mozilla mascot (a red t-rex) on the left, text 'Mozilla Now!' on the right." title="Get Mozilla">
     </a>
