fix w3c validation warning

--- a/layouts/_partials/footer.html
+++ b/layouts/_partials/footer.html
@@ -3,7 +3,7 @@
 <p>This website is best viewed using Ned's cape 1.0 or lower.</p>
 
 <!-- yaaaaaay 88x31!! -->
-<section class="noselect">
+<div class="noselect">
     <a href="//sdomi.pl/">
         <img src="//sdomi.pl/img/button.bmp" alt="An 88x31 button. Witch hat on the left, text 'sdomi' on the right. The background is procedurally generated every 30 or so seconds." title="sdomi's webpage">
     </a>
@@ -16,4 +16,4 @@
     <a href="//archlinux.org/">
         <img src="/buttons/arch.png" alt="An 88x31 button. It shows the Arch Linux logo on a gray background." title="Arch Linux">
     </a>
-</section>
+</div>
